--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
         "start": "tsc && concurrently \"tsc -w\" \"lite-server\""
     },
     "dependencies": {
-        "@angular/common": "6.0.3",
-        "@angular/compiler": "6.0.3",
-        "@angular/core": "6.0.3",
-        "@angular/forms": "6.0.3",
-        "@angular/http": "6.0.3",
-        "@angular/platform-browser": "6.0.3",
-        "@angular/platform-browser-dynamic": "6.0.3",
-        "@angular/router": "6.0.3",
-        "core-js": "2.5.7",
-        "reflect-metadata": "0.1.12",
-        "rxjs": "6.2.0",
+        "@angular/common": "2.0.0",
+        "@angular/compiler": "2.0.0",
+        "@angular/core": "2.0.0",
+        "@angular/forms": "2.0.0",
+        "@angular/http": "2.0.0",
+        "@angular/platform-browser": "2.0.0",
+        "@angular/platform-browser-dynamic": "2.0.0",
+        "@angular/router": "3.0.0",
+        "core-js": "2.4.1",
+        "reflect-metadata": "0.1.3",
+        "rxjs": "5.0.0-beta.12",
         "rxjs-compat": "^6.0.0-tactical-rc.1",
-        "systemjs": "0.21.3",
-        "zone.js": "0.8.26"
+        "systemjs": "0.19.27",
+        "zone.js": "0.6.23"
     },
     "devDependencies": {
-        "@types/core-js": "^0.9.46",
-        "@types/node": "^10.1.3",
-        "concurrently": "3.5.1",
-        "lite-server": "2.3.0",
-        "rimraf": "2.6.2",
-        "typescript": "2.8.3"
+        "@types/core-js": "^0.9.34",
+        "@types/node": "^6.0.41",
+        "concurrently": "2.2.0",
+        "lite-server": "2.2.2",
+        "rimraf": "2.5.4",
+        "typescript": "2.0.2"
     }
 }
